--- a/estilo.css
+++ b/estilo.css
@@ -7,22 +7,45 @@
   }
   body{
     background-color: #343a40;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1em;
   }
   main{
     padding: 70px;
     margin: auto;
   }
+  section > label > h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+  }
 section{
-  width: 250px;
-  height: 250px;
+  width: 300px;
+  height: 300px;
   margin: auto;
   text-align: center;
-  background-color: gray;
+  background-color: #fff;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.37);
   padding: 10px;
+  border-radius: 5px;
+  display: block;
+}
+section > label >span > input#tipInput{
+  margin-top: 5px;
+  position: initial;
+  border: 1px solid black;
+  margin-left: 4px;
   
 }
 
+section > input{
+  border-radius: 3px;
+  padding: 1px;
+}
+
+hr{
+  margin: 5px;
+}
+
 section > div{
-  padding-top: 70px;
+  padding-top: 50px;
 }
